src/styles/blocks/header.scss
.header {
  position: relative;
  width: 100vw;
  height: 800px;
  background-color: $blocksGreyColor;
  color: #fff;
  border-radius: 0 0 50px 50px;

  &__wrapper {
    padding: 0 80px;
    @extend %content-wrapper;

    @media (max-width: $tabletWidth) {
      padding: 0 20px;
    }
  }

  &__content {

    &-info {
      max-width: 360px;
    }

    &-title {
      font-family: Poppins, sans-serif;
      font-style: normal;
      margin-top: 190px;
      margin-bottom: 32px;
      font-weight: bold;
      font-size: 64px;
      line-height: 68px;
      letter-spacing: -2px;

      @media (max-width: $mobileWidth) {
        font-size: 50px;
      }
    }

    &-subtitle {
      font-weight: normal;
      font-size: 18px;
      margin-bottom: 80px;
      line-height: 150%;
    }

    &-btn {
      display: block;
      width: 270px;
      padding-top: 10px;
      @extend %blue-btn;
    }
  }
}

